Fix events list overflow

--- a/src/model/planner/day.css
+++ b/src/model/planner/day.css
@@ -7,6 +7,9 @@
 	grid-template-rows: auto 1fr;
 	grid-gap: 10px;
 	height: 200px;
+}
+
+.day .events {
 	overflow-x: auto;
 }
 
